initial styling using mui

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,100 @@
+/* Utilities */
 .visuallyhidden {
     position: absolute;
     overflow: hidden;
     clip: rect(0 0 0 0);
-    height: 1px;
-    width: 1px;
-    margin: -1px;
-    padding: 0;
-    border: 0;
-}}
+    height: 1px; width: 1px;
+    margin: -1px; padding: 0; border: 0;
+  }
+
+  /* Foundation Elements */
+  .body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    margin: 0 auto;
+    max-width: 900px;
+    padding: 0 8px;
+  }
+
+  .button {
+    background-color: white;
+    border: 1px solid #1b9dde;
+    border-radius: 2px;
+    color: #1b9dde;
+    font-size: 14px;
+    height: 36px;
+    line-height: 36px;
+    margin: 6px 0;
+    padding: 0 26px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: all .2s ease-in-out;
+    vertical-align: middle;
+  }
+
+  .heading {
+    font-weight: 400;
+  }
+
+ /* Header */
+  .header {
+    text-align: center;
+  }
+
+  /* Add Task */
+  .add-task__input-field {
+    height: 30px;
+    margin: 6px 0;
+  }
+
+  .add-task__actions {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 500px;
+  }
+
+  @media screen and (min-width: 600px) {
+    .add-task__actions {
+      flex-direction: row;
+      gap: 8px;
+    }
+
+    .add-task__input-field {
+      flex-basis: 75%;
+    }
+
+    .add-task__actions .button {
+      flex-basis: 25%;
+    }
+  }
+
+  /* Tasks */
+  .task__text {
+    margin-bottom: 0;
+  }
+
+  .task {
+    margin-bottom: 16px;
+  }
+
+  .task--complete .task__text {
+    text-decoration: line-through;
+  }
+
+  .all-tasks {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin: 0 auto;
+    max-width: 700px;
+  }
+
+  .incomplete-tasks, .complete-tasks {
+    flex: 1 1 auto;
+  }
+
+  .task-list {
+    list-style-type: none;
+    padding-inline-start: 0;
+  }
